# structure

./: .travis.yml  Cargo.toml  LICENSE-MIT  README.md  appveyor.yml
src/: byteorder_ext.rs  lib.rs
structure-macro-impl/: Cargo.toml
structure-macro-impl/src/: lib.rs
structure_macro_impl/: Cargo.toml
structure_macro_impl/src/: lib.rs
tests/: test.rs
