[package]
name = "structure"
version = "0.1.2"
authors = ["Liran Ringel <liranringel@gmail.com>"]
description = "Use format strings to create strongly-typed data pack/unpack interfaces."
license = "MIT/Apache-2.0"
keywords = ["structure", "struct"]
repository = "https://github.com/liranringel/structure"
homepage = "https://github.com/liranringel/structure"
documentation = "https://docs.rs/structure"
categories = ["encoding"]
readme = "README.md"
include = ["Cargo.toml", "src/**/*.rs", "README.md", "LICENSE-APACHE", "LICENSE-MIT"]

[badges]
travis-ci = { repository = "liranringel/structure" }
appveyor = { repository = "liranringel/structure" }

[dependencies]
proc-macro-hack = { git = "https://github.com/Cosmo-CoDiOS/proc-macro-hack" }
structure-macro-impl = { version = "0.1.2", path = "structure-macro-impl" }
byteorder = { version = "1", default-features = false }

[workspace]
