[package]
name = "structure-macro-impl"
version = "0.1.0"
authors = ["Liran Ringel <liranringel@gmail.com>"]
license = "MIT/Apache-2.0"
readme = "README.md"
include = ["Cargo.toml", "src/**/*.rs", "README.md", "LICENSE-APACHE", "LICENSE-MIT"]

[lib]
proc-macro = true

[dependencies]
proc-macro-hack = "0.3"
quote = "0.3"
