[package]
name = "structure-macro-impl"
edition = "2018"
version = "0.1.2" # remember to update the dependency in the root crate
authors = ["Liran Ringel <liranringel@gmail.com>"]
description = "Procedural macro crate for the structure crate."
license = "MIT/Apache-2.0"
readme = "README.md"
include = ["Cargo.toml", "src/**/*.rs", "README.md", "LICENSE-APACHE", "LICENSE-MIT"]

[lib]
proc-macro = true

[dependencies]
proc-macro2 = "1.0"
quote = "1.0"
